@@ -17,8 +17,8 @@ Release ...
 * The argument to the -w option is correctly recognized now.
 * If the SHELL environment variable is set to the empty string, it is now
   ignored.
-* A non-null exit status is now returned if a file could not be opened, or
-  if an invalid address is given for a command.
+* A non-null exit status is now returned if a file could not be opened, if
+  an invalid address is given for a command, or if a tag is not found.
 * If the match for a substitution is of length zero, a line overflow is
   now avoided when compiled with the 'UNIX(R) Regular Expression Library'.
 * When moving left while the cursor is positioned over a multicolumn
@@ -37,6 +37,8 @@ Release ...
   printed lines anymore.
 * The 'source' ex command now works if command input comes from a pipe or
   regular file.
+* Ex does not exit on errors immediately anymore if standard input is not
+  a terminal but a pipe or regular file.
 
 Release 1/19/05
 * The last release erroneously made 'X' work like 'x' in visual mode. It now
